# ModernCMake-Chinese

./: .gitbook.yaml  CONTRIBUTING.md  GITBOOKREADME.md  README-GITBOOK.md  README.md  SUMMARY.md  book.json
chapters/: basics.md  install.md  introduction.md  packages.md  projects.md  testing.md
chapters/basics/: comms.md  functions.md  programs.md  structure.md  variables.md
chapters/features/: cpp11.md  debug.md  ides.md  modules.md  small.md  utilities.md
chapters/install/: exporting.md  installing.md  packaging.md
chapters/intro/: dodonot.md  installing.md  newcmake.md  running.md
chapters/projects/: download.md  fetch.md  submodule.md
chapters/testing/: catch.md  googletest.md
examples/: CMakeLists.txt
examples/root-dict/: CMakeLists.txt
examples/root-simple/: CMakeLists.txt
examples/root-simple-3.11/: CMakeLists.txt  README.md
examples/root-usefile/: CMakeLists.txt
